# my_parsers

./: README.md  pyproject.toml  requirements.txt
src/amazon/table_adrres/: amazon_sheet_main.py
src/amazon/table_adrres/store/: homedepot.py  katom.py  target.py  waifair.py  webstaurantstore.py
src/avtoplus.com.ua/: input_category.txt  main.py
src/coldwellbanker.com/: coldwellbanker.py
src/dou.ua/: dou.py
src/dou_ua/: dou.py
src/ebey.com/: ebey.py
src/farfetch.com/: farfetch.py
src/kleinanzeigen.de/: kleinanzeigen.de.py
src/labirint.ru/: labirint.py
src/linkedin/linkedin_scraper/: parser.py
src/lotteautoauction.net/: pars_automobile.py
src/pars_automobile/: pars_automobile.py
src/producthunt.com/linkedin_scraper/: parser.py
src/samsclub.com/: proxy.py  samsclub.py
src/samsclub_com/: samsclub.py
src/site_avto_plus_com_ua/: main.py
src/site_toyota_com_vn/: toyota.py
src/target.com/: target.py
src/target.com/files/: target_category.txt
src/target_com/: functions.py  target.py
src/toyota.com.vn/: toyota.py
src/wayfair/: wayfair.py
src/wayfair.com/: functions.py  wayfair.py
src/wayfair.com/files/: 222 Fifth_08-10-2022_20-20.csv  urls_ waifair.txt
src/wayfair/files/: cookies.txt
src/webstaurantstore.com/: main.py
